--- a/index.html
+++ b/index.html
@@ -1,6 +1,91 @@
 <head>
+
 	<meta charset="utf-8">
 	<title>index</title>
 	<link rel="stylesheet" href="assets/css/main.css" type="text/css" media="all" />
+
 </head>
-<h1 id="hello_world!">Hello World!</h1>
+
+<body>
+
+	<header class="navigation" role="banner">
+		<div class="navigation-wrapper">
+			<a href="javascript:void(0)" class="logo">
+				<img src="https://www.dropbox.com/s/v97gyf2bfzg16lk/Logo_Leka_Small.png?raw=1" alt="Logo Image">
+			</a>
+			<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+			<nav role="navigation">
+				<ul id="js-navigation-menu" class="navigation-menu show">
+					<li class="nav-link"><a href="javascript:void(0)">Products</a></li>
+					<li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
+					<li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+					<li class="nav-link more"><a href="javascript:void(0)">More</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<div id="startchange" class="hero">
+		<div class="hero-inner">
+			<a href="" class="hero-logo"><img src="https://www.dropbox.com/s/q4g1vw8qgkuc62d/Logo_Moti-09.png?raw=1" alt="Logo Image"></a>
+			<div class="hero-copy">
+				<h1>Short description of Product</h1>
+				<p>A few reasons why this product is worth using, who it's for and why they need it.</p>	
+			</div>
+			<button>Learn More</button>
+		</div>
+	</div>
+
+	<div class="video">
+		<div class="video-wrapper">
+			<iframe src="//player.vimeo.com/video/99045227?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0&amp;loop=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<!-- <iframe src="http://www.youtube.com/embed/bqtvzOb9bi0?rel=0&#38;modestbranding=1&#38;autoplay=1&#38;loop=1&#38;showinfo=0&#38;iv_load_policy=3&#38;controls=0" frameborder="0" allowfullscreen></iframe> -->
+		</div>
+	</div>
+
+	<!-- <div id="map_canvas"></div> -->
+
+
+	<!--<div class="wrapper-for-content-outside-of-footer">
+		Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
+	</div>-->
+
+	<footer class="footer-2" role="contentinfo">
+		<div class="footer-logo">
+			<img src="https://www.dropbox.com/s/v97gyf2bfzg16lk/Logo_Leka_Small.png?raw=1" alt="Logo image">
+		</div>
+		<ul>
+			<li><a href="javascript:void(0)">About</a></li>
+			<li><a href="javascript:void(0)">Contact</a></li>
+			<li><a href="javascript:void(0)">Products</a></li>
+		</ul>
+
+		<div class="footer-secondary-links">
+			<ul>
+				<li><a href="javascript:void(0)">Terms and Conditions</a></li>
+				<li><a href="javascript:void(0)">Privacy Policy</a></li>
+			</ul>
+
+			<ul class="footer-social">
+				<li><a href="javascript:void(0)">
+						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
+				</a></li>
+				<li><a href="javascript:void(0)">
+						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
+				</a></li>
+				<li><a href="javascript:void(0)">
+						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
+				</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- <script src="//code.jquery.com/jquery&#45;1.11.2.min.js"></script> -->
+	<!-- <script src="assets/js/vendor/jquery.min.js" type="text/javascript" charset="utf&#45;8"></script> -->
+	<script src="assets/js/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<script src="assets/js/script.js" type="text/javascript" charset="utf-8"></script>
+
+
+</body>
+
