navbar transition when scrolling is on, just needs customization

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header class="navigation" role="banner">
 		<div class="navigation-wrapper">
 			<a href="javascript:void(0)" class="logo">
-				<img src="https://www.dropbox.com/s/v97gyf2bfzg16lk/Logo_Leka_Small.png?raw=1" alt="Logo Image">
+				<img src="assets/img/Leka-Logo.png" alt="Logo Image">
 			</a>
 			<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
 			<nav role="navigation">
@@ -25,9 +25,9 @@
 		</div>
 	</header>
 
-	<div id="startchange" class="hero">
+	<div class="hero">
 		<div class="hero-inner">
-			<a href="" class="hero-logo"><img src="https://www.dropbox.com/s/q4g1vw8qgkuc62d/Logo_Moti-09.png?raw=1" alt="Logo Image"></a>
+			<a href="" class="hero-logo"><img src="assets/img/Moti-Logo.png" alt="Logo Image"></a>
 			<div class="hero-copy">
 				<h1>Short description of Product</h1>
 				<p>A few reasons why this product is worth using, who it's for and why they need it.</p>	
@@ -52,7 +52,7 @@
 
 	<footer class="footer-2" role="contentinfo">
 		<div class="footer-logo">
-			<img src="https://www.dropbox.com/s/v97gyf2bfzg16lk/Logo_Leka_Small.png?raw=1" alt="Logo image">
+			<img src="assets/img/Leka-Logo.png" alt="Logo image">
 		</div>
 		<ul>
 			<li><a href="javascript:void(0)">About</a></li>
