navigation now Ok - fixed plugins import order with neat&co - cleanup footer

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 	<meta charset="utf-8">
 	<title>index</title>
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css" type="text/css" media="all" />
 
 </head>
@@ -13,7 +14,7 @@
 			<a href="javascript:void(0)" class="logo">
 				<img src="assets/img/Leka-Logo.png" alt="Logo Image">
 			</a>
-			<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+			<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu"><i class="fa fa-bars"></i></a>
 			<nav role="navigation">
 				<ul id="js-navigation-menu" class="navigation-menu show">
 					<li class="nav-link"><a href="javascript:void(0)">Products</a></li>
@@ -25,7 +26,7 @@
 		</div>
 	</header>
 
-	<div class="hero">
+	<section class="hero">
 		<div class="hero-inner">
 			<a href="" class="hero-logo"><img src="assets/img/Moti-Logo.png" alt="Logo Image"></a>
 			<div class="hero-copy">
@@ -34,21 +35,16 @@
 			</div>
 			<button>Learn More</button>
 		</div>
-	</div>
+	</section>
 
-	<div class="video">
+	<section class="video">
 		<div class="video-wrapper">
-			<iframe src="//player.vimeo.com/video/99045227?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0&amp;loop=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<!-- <iframe src="//player.vimeo.com/video/99045227?title=0&#38;amp;byline=0&#38;amp;portrait=0&#38;amp;autoplay=0&#38;amp;loop=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 			<!-- <iframe src="http://www.youtube.com/embed/bqtvzOb9bi0?rel=0&#38;modestbranding=1&#38;autoplay=1&#38;loop=1&#38;showinfo=0&#38;iv_load_policy=3&#38;controls=0" frameborder="0" allowfullscreen></iframe> -->
 		</div>
-	</div>
+	</section>
 
 	<!-- <div id="map_canvas"></div> -->
-
-
-	<!--<div class="wrapper-for-content-outside-of-footer">
-		Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
-	</div>-->
 
 	<footer class="footer-2" role="contentinfo">
 		<div class="footer-logo">
@@ -83,7 +79,7 @@
 	<!-- <script src="//code.jquery.com/jquery&#45;1.11.2.min.js"></script> -->
 	<!-- <script src="assets/js/vendor/jquery.min.js" type="text/javascript" charset="utf&#45;8"></script> -->
 	<script src="assets/js/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
-	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
 	<script src="assets/js/script.js" type="text/javascript" charset="utf-8"></script>
 
 
