add made with love to footer

--- a/index.html
+++ b/index.html
@@ -46,20 +46,28 @@
 
 	<!-- <div id="map_canvas"></div> -->
 
-	<footer class="footer-2" role="contentinfo">
+	<footer class="footer" role="contentinfo">
 		<div class="footer-logo">
 			<img src="assets/img/Leka-Logo.png" alt="Logo image">
 		</div>
-		<ul>
-			<li><a href="javascript:void(0)">About</a></li>
-			<li><a href="javascript:void(0)">Contact</a></li>
-			<li><a href="javascript:void(0)">Products</a></li>
-		</ul>
+
+		<div class="footer-primary-links">
+			<ul>
+				<li><a href="javascript:void(0)">About</a></li>
+				<li><a href="javascript:void(0)">Contact</a></li>
+				<li><a href="javascript:void(0)">Products</a></li>
+			</ul>
+		</div>
+
+		<div class="footer-love-letter">
+
+			
+		</div>
+
 
 		<div class="footer-secondary-links">
 			<ul>
-				<li><a href="javascript:void(0)">Terms and Conditions</a></li>
-				<li><a href="javascript:void(0)">Privacy Policy</a></li>
+				<li>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2015</li>
 			</ul>
 
 			<ul class="footer-social">
