--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<title>index</title>
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/main.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="/css/main.css" type="text/css" media="all" />
 
 </head>
 
@@ -12,7 +12,7 @@
 	<header class="navigation" role="banner">
 		<div class="navigation-wrapper">
 			<a href="javascript:void(0)" class="logo">
-				<img src="assets/img/Leka-Logo.png" alt="Logo Image">
+				<img src="/img/Leka-Logo.png" alt="Logo Image">
 			</a>
 			<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu"><i class="fa fa-bars"></i></a>
 			<nav role="navigation">
@@ -28,10 +28,10 @@
 
 	<section class="hero">
 		<div class="hero-inner">
-			<a href="" class="hero-logo"><img src="assets/img/Moti-Logo.png" alt="Logo Image"></a>
+			<a href="" class="hero-logo"><img src="/img/Moti-Logo.png" alt="Logo Image"></a>
 			<div class="hero-copy">
 				<h1>Short description of Product</h1>
-				<p>A few reasons why this product is worth using, who it's for and why they need it.</p>	
+				<p>A few reasons why this product is worth using, who it's for and why they need it.</p>
 			</div>
 			<button>Learn More</button>
 		</div>
@@ -44,51 +44,43 @@
 		</div>
 	</section>
 
-	<!-- <div id="map_canvas"></div> -->
+	<!-- <div id="map_cavas"></div> -->
+	<section id="cta">
+		<h2>Sign up for beta access</h2>
+		<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
+		<form>
+			<div class="row uniform 50%">
+				<div class="8u 12u(mobilep)">
+					<input type="email" name="email" id="email" placeholder="Email Address" />
+				</div>
+				<div class="4u 12u(mobilep)">
+					<input type="submit" value="Sign Up" class="fit" />
+				</div>
+			</div>
+		</form>
+
+	</section>
 	<footer class="footer" role="contentinfo">
-		<div class="footer-logo">
-			<img src="assets/img/Leka-Logo.png" alt="Logo image">
-		</div>
-
-		<div class="footer-primary-links">
-			<ul>
-				<li><a href="javascript:void(0)">About</a></li>
-				<li><a href="javascript:void(0)">Contact</a></li>
-				<li><a href="javascript:void(0)">Products</a></li>
-			</ul>
-		</div>
-
-		<div class="footer-love-letter">
-
-			
-		</div>
-
-
 		<div class="footer-secondary-links">
-			<ul>
-				<li>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2015</li>
-			</ul>
 
-			<ul class="footer-social">
-				<li><a href="javascript:void(0)">
-						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
-				</a></li>
-				<li><a href="javascript:void(0)">
-						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
-				</a></li>
-				<li><a href="javascript:void(0)">
-						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
-				</a></li>
-			</ul>
+			<p>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2015</p>
+
+			<a title="Ecrivez-nous!" href="mailto:hello@weareleka.com?subject=I%20Love%20Leka&amp;body=You%20are%20awesome,%20keep%20up%20the%20good%20work!"><i class="fa fa-envelope-o"></i></a>
+			<a title="Follow us on Facebook" href="https://www.facebook.com/WeAreLeka"><i class="fa fa-facebook-square"></i></a>
+			<a title="Follow us on Twitter" href="https://twitter.com/WeAreLeka"><i class="fa fa-twitter"></i></a>
+			<a title="Follow us on Github" href="https://github.com/WeAreLeka"><i class="fa fa-github"></i></a>
+			<a title="Follow our blog" href="http://blog.weareleka.com"><i class="fa fa-rss"></i></a>
+			<a title="Follow us on Vimeo" href="http://www.youtube.com/user/LekaSmartToy"><i class="fa fa-vimeo-square"></i></a>
+
 		</div>
 	</footer>
 
 	<!-- <script src="//code.jquery.com/jquery&#45;1.11.2.min.js"></script> -->
-	<!-- <script src="assets/js/vendor/jquery.min.js" type="text/javascript" charset="utf&#45;8"></script> -->
-	<script src="assets/js/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
+	<!-- <script src="/js/vendor/jquery.min.js" type="text/javascript" charset="utf&#45;8"></script> -->
+	<script src="/js/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
 	<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
-	<script src="assets/js/script.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/script.js" type="text/javascript" charset="utf-8"></script>
 
 
 </body>
