--- a/index.html
+++ b/index.html
@@ -30,37 +30,65 @@
 		<div class="hero-inner">
 			<a href="" class="hero-logo"><img src="/img/Moti-Logo.png" alt="Logo Image"></a>
 			<div class="hero-copy">
-				<h1>Short description of Product</h1>
-				<p>A few reasons why this product is worth using, who it's for and why they need it.</p>
+				<h1>Say Hello to Moti</h1>
+				<p>And discover a new way to play, learn and progress</p>
 			</div>
-			<button>Learn More</button>
+			<button class="pre-order">Pre-order</button>
+			<button class="learn-more">Learn More</button>
+		<div class="hero-blur"></div>
 		</div>
 	</section>
 
-	<section class="video">
-		<div class="video-wrapper">
+	<section class="what-is-moti">
+
+		<ul class="bullets">
+			<li class="bullet three-col-bullet">
+				<div class="bullet-icon bullet-icon-1">
+					<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
+					" alt="">
+				</div>
+				<div class="bullet-content">
+					<h2>This Bullet Title</h2>
+					<p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+				</div>
+			</li>
+			<li class="bullet three-col-bullet">
+				<div class="bullet-icon bullet-icon-2">
+					<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
+				</div>
+				<div class="bullet-content">
+					<h2>Another Bullet Title</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+				</div>
+			</li>
+			<li class="bullet three-col-bullet">
+				<div class="bullet-icon bullet-icon-3">
+					<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
+				</div>
+				<div class="bullet-content">
+					<h2>Last Bullet Title</h2>
+					<p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+				</div>
+			</li>
+		</ul>
+	</section>
+
+	<!-- <section class="video"> -->
+		<!-- <div class="video&#45;wrapper"> -->
 			<!-- <iframe src="//player.vimeo.com/video/99045227?title=0&#38;amp;byline=0&#38;amp;portrait=0&#38;amp;autoplay=0&#38;amp;loop=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 			<!-- <iframe src="http://www.youtube.com/embed/bqtvzOb9bi0?rel=0&#38;modestbranding=1&#38;autoplay=1&#38;loop=1&#38;showinfo=0&#38;iv_load_policy=3&#38;controls=0" frameborder="0" allowfullscreen></iframe> -->
-		</div>
-	</section>
+		<!-- </div> -->
+	<!-- </section> -->
 
 	<!-- <div id="map_cavas"></div> -->
-	<section id="cta">
+	<section class="beta-signup">
 		<h2>Sign up for beta access</h2>
 		<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
-		<form>
-			<div class="row uniform 50%">
-				<div class="8u 12u(mobilep)">
-					<input type="email" name="email" id="email" placeholder="Email Address" />
-				</div>
-				<div class="4u 12u(mobilep)">
-					<input type="submit" value="Sign Up" class="fit" />
-				</div>
-			</div>
-		</form>
+
 
 	</section>
+
 	<footer class="footer" role="contentinfo">
 		<div class="footer-secondary-links">
 
