modal in progress but not sure it's a good idea

--- a/index.html
+++ b/index.html
@@ -33,83 +33,99 @@
 				<h1>Say Hello to Moti</h1>
 				<p>And discover a new way to play, learn and progress</p>
 			</div>
-			<button class="pre-order">Pre-order</button>
-			<button class="learn-more">Learn More</button>
-		<div class="hero-blur"></div>
-		</div>
-	</section>
 
-	<section class="what-is-moti">
+			<div class="modal">
+				<label for="modal-pre-order">
+					<div class="modal-trigger">Pre-order</div>
+				</label>
 
-		<ul class="bullets">
-			<li class="bullet three-col-bullet">
-				<div class="bullet-icon bullet-icon-1">
-					<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
-					" alt="">
+				<label>
+					<div class="learn-more"><a href="#">Learn more</a></div>
+				</label>
+
+				<input class="modal-state" id="modal-pre-order" type="checkbox" />
+				<div class="modal-window">
+					<div class="modal-inner">
+						<label class="modal-close" for="modal-pre-order"></label>
+						<h1>We are launching soon and we need you!</h1>
+						<p class="modal-intro">In about six months, we will launch a worldwide crowdfunding campaign. To get there, we need your precious help!</p>
+						<p class="modal-content">If you want to be part of the adventure, be the first to know when we'll launch, take part in beta testing and help us build the best campaign for the best product, join us!</p>
+					</div>
 				</div>
-				<div class="bullet-content">
-					<h2>This Bullet Title</h2>
-					<p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
-				</div>
-			</li>
-			<li class="bullet three-col-bullet">
-				<div class="bullet-icon bullet-icon-2">
-					<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
-				</div>
-				<div class="bullet-content">
-					<h2>Another Bullet Title</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
-				</div>
-			</li>
-			<li class="bullet three-col-bullet">
-				<div class="bullet-icon bullet-icon-3">
-					<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
-				</div>
-				<div class="bullet-content">
-					<h2>Last Bullet Title</h2>
-					<p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
-				</div>
-			</li>
-		</ul>
-	</section>
+			</div>
+		</section>
 
-	<!-- <section class="video"> -->
-		<!-- <div class="video&#45;wrapper"> -->
-			<!-- <iframe src="//player.vimeo.com/video/99045227?title=0&#38;amp;byline=0&#38;amp;portrait=0&#38;amp;autoplay=0&#38;amp;loop=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-			<!-- <iframe src="http://www.youtube.com/embed/bqtvzOb9bi0?rel=0&#38;modestbranding=1&#38;autoplay=1&#38;loop=1&#38;showinfo=0&#38;iv_load_policy=3&#38;controls=0" frameborder="0" allowfullscreen></iframe> -->
-		<!-- </div> -->
-	<!-- </section> -->
+		<section class="what-is-moti">
 
-	<!-- <div id="map_cavas"></div> -->
-	<section class="beta-signup">
-		<h2>Sign up for beta access</h2>
-		<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+			<ul class="bullets">
+				<li class="bullet three-col-bullet">
+					<div class="bullet-icon bullet-icon-1">
+						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
+						" alt="">
+					</div>
+					<div class="bullet-content">
+						<h2>This Bullet Title</h2>
+						<p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+					</div>
+				</li>
+				<li class="bullet three-col-bullet">
+					<div class="bullet-icon bullet-icon-2">
+						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
+					</div>
+					<div class="bullet-content">
+						<h2>Another Bullet Title</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+					</div>
+				</li>
+				<li class="bullet three-col-bullet">
+					<div class="bullet-icon bullet-icon-3">
+						<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
+					</div>
+					<div class="bullet-content">
+						<h2>Last Bullet Title</h2>
+						<p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+					</div>
+				</li>
+			</ul>
+		</section>
 
+		<!-- <section class="video"> -->
+			<!-- <div class="video&#45;wrapper"> -->
+				<!-- <iframe src="//player.vimeo.com/video/99045227?title=0&#38;amp;byline=0&#38;amp;portrait=0&#38;amp;autoplay=0&#38;amp;loop=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+				<!-- <iframe src="http://www.youtube.com/embed/bqtvzOb9bi0?rel=0&#38;modestbranding=1&#38;autoplay=1&#38;loop=1&#38;showinfo=0&#38;iv_load_policy=3&#38;controls=0" frameborder="0" allowfullscreen></iframe> -->
+				<!-- </div> -->
+			<!-- </section> -->
 
-
-	</section>
-
-	<footer class="footer" role="contentinfo">
-		<div class="footer-secondary-links">
-
-			<p>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2015</p>
-
-			<a title="Ecrivez-nous!" href="mailto:hello@weareleka.com?subject=I%20Love%20Leka&amp;body=You%20are%20awesome,%20keep%20up%20the%20good%20work!"><i class="fa fa-envelope-o"></i></a>
-			<a title="Follow us on Facebook" href="https://www.facebook.com/WeAreLeka"><i class="fa fa-facebook-square"></i></a>
-			<a title="Follow us on Twitter" href="https://twitter.com/WeAreLeka"><i class="fa fa-twitter"></i></a>
-			<a title="Follow us on Github" href="https://github.com/WeAreLeka"><i class="fa fa-github"></i></a>
-			<a title="Follow our blog" href="http://blog.weareleka.com"><i class="fa fa-rss"></i></a>
-			<a title="Follow us on Vimeo" href="http://www.youtube.com/user/LekaSmartToy"><i class="fa fa-vimeo-square"></i></a>
-
-		</div>
-	</footer>
-
-	<!-- <script src="//code.jquery.com/jquery&#45;1.11.2.min.js"></script> -->
-	<!-- <script src="/js/vendor/jquery.min.js" type="text/javascript" charset="utf&#45;8"></script> -->
-	<script src="/js/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
-	<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
-	<script src="/js/script.js" type="text/javascript" charset="utf-8"></script>
+		<!-- <div id="map_cavas"></div> -->
+		<section class="beta-signup">
+			<h2>Sign up for beta access</h2>
+			<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
 
-</body>
+
+		</section>
+
+		<footer class="footer" role="contentinfo">
+			<div class="footer-secondary-links">
+
+				<p>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2015</p>
+
+				<a title="Ecrivez-nous!" href="mailto:hello@weareleka.com?subject=I%20Love%20Leka&amp;body=You%20are%20awesome,%20keep%20up%20the%20good%20work!"><i class="fa fa-envelope-o"></i></a>
+				<a title="Follow us on Facebook" href="https://www.facebook.com/WeAreLeka"><i class="fa fa-facebook-square"></i></a>
+				<a title="Follow us on Twitter" href="https://twitter.com/WeAreLeka"><i class="fa fa-twitter"></i></a>
+				<a title="Follow us on Github" href="https://github.com/WeAreLeka"><i class="fa fa-github"></i></a>
+				<a title="Follow our blog" href="http://blog.weareleka.com"><i class="fa fa-rss"></i></a>
+				<a title="Follow us on Vimeo" href="http://www.youtube.com/user/LekaSmartToy"><i class="fa fa-vimeo-square"></i></a>
+
+			</div>
+		</footer>
+
+		<!-- <script src="//code.jquery.com/jquery&#45;1.11.2.min.js"></script> -->
+		<!-- <script src="/js/vendor/jquery.min.js" type="text/javascript" charset="utf&#45;8"></script> -->
+		<script src="/js/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+		<script src="/js/script.js" type="text/javascript" charset="utf-8"></script>
+
+
+	</body>
 
